--- a/application/templates/success.html
+++ b/application/templates/success.html
@@ -1,5 +1,3 @@
 {% extends "layout.html" %}
 {% block title %}{{type.name}} - Login Successful{% endblock %}
-{% block main %}
-<h3>{{type.name}} Login Successful</h3>
-{% endblock %}
+{% block heading %}Login Successful{% endblock %}
