--- a/application/templates/login.html
+++ b/application/templates/login.html
@@ -1,15 +1,35 @@
 {% extends "layout.html" %}
-{% block title %}{{type.name}} - Login{% endblock %}
+{% block title %}Log In - {{type.name}}{% endblock %}
+{% block heading %}Log In{% endblock %}
+{% block preamble %}
+<div class="content">
+<p><a href="/signup/{{type.code}}">Create an account</a></p>
+</div>
+{% endblock %}
 {% block main %}
-<h3>Login {{type.name}}</h3>
 <form method="POST" action="/login/{{type.code}}">
+
     {% if error %}
-    <p class="error">{{error}}</p>
+    <div class="notification is-danger">{{error}}</div>
     {% endif %}
 
-    <p><label for="username">Username:</label> <input type="text" id="username" name="username"/></p>
-    <p><label for="password">Password:</label> <input type="password" id="password" name="password"/></p>
-    <input type="submit" value="Login"/>
+
+    <div class="field">
+        <label class="label" for="username">Username</label>
+        <div class="control">
+            <input class="input" type="text" id="username" name="username"/>
+        </div>
+    </div>
+
+    <div class="field">
+        <label class="label" for="password">Password</label>
+        <div class="control">
+            <input class="input" type="password" id="password" name="password"/>
+        </div>
+    </div>
+
+    <div class="control">
+        <input class="button is-primary" type="submit" value="Login"/>
+    </div>
 </form>
-<p><a href="/signup/{{type.code}}">Create an accouont</a></p>
 {% endblock %}
